--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="canonical" href="http://www.andrewnl.com" />
+    <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no" />
+    <meta name="author" content="Andrew Nelson Leonberger" />
+    <meta name="description" content="A portfolio site about Andrew Nelson Leonberger" />
+    <meta property="og:title" content="*TITLE*" />
+    <meta property="og:image" content="%PUBLIC_URL%/linkedin.png" />
+    <meta property="og:description" content="*DESCRIPTION*" />
+    <!-- <meta name="robots" content="index, follow" /> -->
+    <meta name="copyright" content="" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo_white.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Andrew Leonberger | Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
