--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no" />
     <meta name="author" content="Andrew Nelson Leonberger" />
     <meta name="description" content="A portfolio site about Andrew Nelson Leonberger" />
-    <meta property="og:title" content="*TITLE*" />
+    <meta property="og:title" content="" />
     <meta property="og:image" content="%PUBLIC_URL%/linkedin.png" />
-    <meta property="og:description" content="*DESCRIPTION*" />
+    <meta property="og:description" content="" />
     <!-- <meta name="robots" content="index, follow" /> -->
     <meta name="copyright" content="" />
 
@@ -43,5 +43,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="./main.js"></script>
   </body>
 </html>
