--- a/src/template.html
+++ b/src/template.html
@@ -10,8 +10,8 @@
     <meta property="og:title" content="" />
     <meta property="og:image" content="%PUBLIC_URL%/linkedin.png" />
     <meta property="og:description" content="" />
-    <!-- <meta name="robots" content="index, follow" /> -->
     <meta name="copyright" content="" />
+    <!-- <meta name="robots" content="index, follow" /> -->
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo_white.png" />
     <!--
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Andrew Leonberger | Portfolio</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
