--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
     <link rel="canonical" href="http://www.andrewnl.com" />
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no" />
     <meta name="author" content="Andrew Nelson Leonberger" />
     <meta name="description" content="A portfolio site about Andrew Nelson Leonberger" />
     <meta property="og:title" content="" />
-    <meta property="og:image" content="%PUBLIC_URL%/linkedin.png" />
+    <meta property="og:image" content="" />
     <meta property="og:description" content="" />
     <!-- <meta name="robots" content="index, follow" /> -->
     <meta name="copyright" content="" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo_white.png" />
+    <link rel="apple-touch-icon" href="./img/logo_white.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Andrew Leonberger | Portfolio</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
