build fixes and cleanup, fixed app.js, improved lazy load

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <meta property="og:description" content="" />
     <!-- <meta name="robots" content="index, follow" /> -->
     <meta name="copyright" content="" />
-    <link rel="apple-touch-icon" href="./img/logo_white.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="./assets/logo.png" />
+    <link rel="manifest" href="manifest.json" />
     <title>Andrew Leonberger | Portfolio</title>
   </head>
   <body>
